# rally-tracks

./: .backportrc.json  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  LICENSE  Makefile  README.md  catalog-info.yaml  download.py  download.sh  es-version  pyproject.toml  pytest.ini  report_normalize.md  report_regular.md  report_streams.md  requirements.txt  result.json  run-bench.sh
.buildkite/: pull-requests.json
.ci/: build.sh
.github/: filters.yml  labeler.yml
api_keys/: track.json  track.py
arxiv_for_fanns/: .gitignore  README.md  index.json  notes  track.json  track.py  track_processor.py
behavioral_analytics/: README.md  files.txt  track.json  track.py
big5/: README.md  track.json
cloudnative/: README.md  files.txt  track.json
cohere_v3_vector/: README.md  files.txt  index-vectors-only-mapping.json  index-vectors-with-text-mapping.json  track.json
cohere_vector/: README.md  files.txt  index-vectors-only-mapping.json  index-vectors-with-text-mapping.json  index.json  track.json  track.py
dbpedia_ranking/: README.md  dev.tsv  track.py
dense_vector/: README.md  files.txt  index.json  queries.json  track.json  track.py
elastic/: .gitignore  Makefile  README.md  pytest.ini
elser/: README.md  track.json
elser-ingest-speedtest/: README.md  bert-vocab-whole-words-mapping.json  files.txt  track.json  track.py
elser-speedtest/: README.md  track.json  track.py
eql/: README.md  endgame-4.28.2-000001.json  legacy_queries.json  queries.json  track.json  track.py
esql/: README.md  generate_unmapped_data.py  idx_mapping0.json  idx_mapping1.json  idx_mapping10.json  idx_mapping11.json  idx_mapping12.json  idx_mapping13.json  idx_mapping14.json  idx_mapping15.json  idx_mapping16.json  idx_mapping17.json  idx_mapping18.json  idx_mapping19.json  idx_mapping2.json  idx_mapping3.json  idx_mapping4.json  idx_mapping5.json  idx_mapping6.json  idx_mapping7.json  idx_mapping8.json  idx_mapping9.json  track.json  track.py  unmapped_full_mapping.json  unmapped_no_mapping.json  unmapped_typed_mapping.json
eventdata/: README.md  README.txt  index.json  mappings.json  track.json
geonames/: README.md  index.json  mappings.json  track.json  track.py
geopoint/: README.md  index.json  track.json
geopointshape/: README.md  index.json
geoshape/: README.md  files.txt  index.json  track.json
github_archive/: README.md  files.txt  index-mappings.json  index-template.json  index.json  track.json
has-privileges/: README.md  kibana-app-privileges-8.19.7.json.bz2  kibana-app-privileges-9.2.1.json.bz2  kibana-app-privileges.json.bz2  track.json  track.py
has_privileges/: README.md  track.json  track.py  track_processor.py
has_privileges_bystander/: README.md  track.json  track.py
http_logs/: README.md  index-runtime-dissect-doc-values.json  index-runtime-dissect-source.json  index-runtime-fields.json  index-runtime-grok-doc-values.json  index-runtime-grok-source.json  index-runtime-index-of-doc-values.json  index-runtime-index-of-source.json  index-template.json  index.json  mappings.json  track.json  track.py
it/: conftest.py  test_all_tracks_and_challenges.py  test_custom_parameters.py  test_has_privileges.py  test_logs.py  test_security.py  test_synthetic_source.py  test_test_mode_as_param.py
it_serverless/: conftest.py  test_logs.py  test_selected_tracks_and_challenges.py  test_some_tracks_and_challenges.py
it_tracks/: conftest.py  test_all_tracks_and_challenges.py  test_custom_parameters.py  test_synthetic_source.py
it_tracks_serverless/: conftest.py  test_selected_tracks_and_challenges.py
joins/: README.md  index-join_base_idx.json  index-lookup_idx_100000000_f10.json  index-lookup_idx_1000000_f10.json  index-lookup_idx_100000_f10.json  index-lookup_idx_1000_100000_200000_f10.json  index-lookup_idx_1000_f10.json  index-lookup_idx_1_f2_x10000.json  index-lookup_idx_200000_f10.json  index-lookup_idx_5000000_f10.json  index-lookup_idx_500000_f10.json  track.json
k8s_metrics/: README.md  track.json
logging/: mappings.json  track.json
metricbeat/: files.txt  index.json  track.json
msmarco-jina-10m-vector/: README.md  index-vectors-only-mapping.json  track.json  track.py
msmarco-passage-elser/: README.md  files.txt  msmarco-passage-collection-elser-documents-1k.json.bz2  msmarco-passage-collection-elser.json  track.json  track.py
msmarco-passage-elser-2/: README.md  track.json  track.py
msmarco-passage-elser-throughput/: README.md  bert-vocab-whole-words-mapping.json  elser-query-tokens.json  track.json  track.py
msmarco-passage-ranking/: README.md  files.txt  msmarco-passage-ranking-collection.json  qrels-small.tsv  queries-small.json  queries.json  track.json  track.py
msmarco-v2-hybrid/: .gitignore  README.md  index-vectors-with-text-mapping.json  track.json  track.py
msmarco-v2-vector/: README.md  files.txt  index-vectors-only-mapping.json  index-vectors-with-text-mapping.json  qrels.tsv  queries-recall 2.json  queries-recall-10m.json.bz2  queries-recall-18m.json.bz2  queries-recall-36m.json.bz2  queries-recall-72m.json.bz2  queries-recall-test.json.bz2  queries-recall.json  queries-recall.json.bz2  queries-test.json.bz2  track.json  track.py
nested/: README.md  index.json  mappings.json  track.json  track.py
noaa/: README.md  aggs-tasks.json  filter-aggs-tasks.json  index.json  track.py
nyc_taxis/: README.md  index-payment-types.json  index-rate-codes.json  index-trip-types.json  index-vendors.json  index.json  mappings.json  track.json  track.py
openai_vector/: README.md  files.txt  index-vectors-only-mapping-with-docid-mapping.json  track.json  (+4 more)
(+1175 files in other folders)
