[build-system]
requires = ["hatchling<=1.18.0", "hatch-vcs"]
build-backend = "hatchling.build"

[project.optional-dependencies]
develop = [
    "hatch==1.7.0",
    "hatchling==1.18.0",
    "click<8.3.0", #fix to a pre 8.3.0 version until fixed upstream
    "black==23.3.0",
    "isort==5.12.0",
    "pre-commit==3.3.3",
    "pip==22.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "vcs"

[project]
name = "rally-tracks"
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.8"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.buildkite",
  "/.github",
  "/.ci",
]

[tool.hatch.envs.default]
dependencies = [
    "esrally[develop] @ git+https://github.com/elastic/rally.git@master",
    "pytest-rally @ git+https://github.com/elastic/pytest-rally.git@main",
]

[tool.hatch.envs.unit]
extra-dependencies = [
    "geneve==0.0.3",
    "elastic-package-assets @ git+https://github.com/elastic/package-assets.git@main"
]

[tool.hatch.envs.unit.scripts]
test = "pytest"

[tool.hatch.envs.it.scripts]
test = "pytest it --log-cli-level=INFO"

[tool.hatch.envs.it_serverless.scripts]
test_user = "pytest -s it_serverless --log-cli-level=INFO"
test_operator = "pytest -s it_serverless --log-cli-level=INFO --operator"

[tool.pytest.ini_options]
# set to true for more verbose output of tests
log_cli = false
addopts = "--verbose --color=yes --ignore=it --ignore=it_serverless"
junit_family = "xunit2"
junit_logging = "all"
asyncio_mode = "strict"

[tool.black]
line-length = 140
target-version = ['py38']

[tool.isort]
profile = 'black'
