[build-system]
requires = ["hatchling<=1.18.0", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "vcs"

[project]
name = "rally-tracks"
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.10,<3.14"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.buildkite",
  "/.github",
  "/.ci",
]

[dependency-groups]
develop = [
    "black==24.10.0",
    "isort==5.12.0",
    "pre-commit==3.3.3",
]
unit = [
    "esrally",
    "pytest==8.4.2",
    "pytest-asyncio==1.2.0",
    "geneve==0.3.0",
    "elastic-package-assets",
]
it = [
    "esrally",
    "pytest-rally",
]
it-serverless = [
    "esrally",
    "pytest-rally",
]

[tool.pytest.ini_options]
# set to true for more verbose output of tests
log_cli = false
addopts = "--verbose --color=yes --ignore=it_tracks --ignore=it_tracks_serverless"
junit_family = "xunit2"
junit_logging = "all"
asyncio_mode = "strict"
markers = [
    'track(name): Optionally associate a test class, function or module with a track. Usage: @pytest.mark.track("track1", "track2"). You can use a comma-separated list of track names. When given the --track-filter option (--track-filter=track1,track3), pytest will only run the tests marked with at least one of the track names. Unmarked objects will run by default.'
]

[tool.black]
line-length = 140
target-version = ['py310', 'py311', 'py312', 'py313']

[tool.isort]
profile = 'black'

[tool.uv]
python-preference = "only-managed"

[tool.uv.sources]
elastic-package-assets = { git = "https://github.com/elastic/package-assets.git", branch = "main" }
esrally = { git = "https://github.com/elastic/rally.git", branch = "master" }
pytest-rally = { git = "https://github.com/elastic/pytest-rally.git", branch = "main" }
